# service-desk

./: .gitignore  CODEOWNERS.MD  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  sonar-project.properties
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
alerts/: README.md  pyproject.toml  telegram_notifier.py
ansible/: deploy.yml  playbook.yml
ansible/group_vars/: app.yml
ansible/templates/: service-desk.env.j2
argocd/: project.yaml  root-application.yaml
argocd/apps/: service-desk-backend.yaml  service-desk-frontend.yaml  service-desk-monitoring.yaml  service-desk-postgresql.yaml  service-desk-sonarqube.yaml
helm/service-desk-backend/: Chart.yaml  values-prod.yaml  values.yaml
scripts/: bootstrap-k8s-lab4.sh
src/backend/: .dockerignore  .flake8  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  coverage.xml  docker-entrypoint.sh  pyproject.toml
src/backend/app/: main.py  metrics.py  routers.py  service.py
src/backend/app/api/healthz/: handler.py  schemas.py
src/backend/app/api/tickets/: dependencies.py  handler.py  schemas.py  service.py
src/backend/app/db/: base.py  client.py  models.py  session.py  types.py
src/backend/app/db/migrations/: env.py  script.py.mako
src/backend/app/db/migrations/versions/: 0001_create_tickets.py  0002_add_ticket_description.py  0003_rebuild_tickets.py  ad466f629331_add_new_field.py
src/backend/tests/: conftest.py
src/backend/tests/integrations/: test_db_client.py  test_tickets_api.py  test_tickets_db.py
src/backend/tests/unit/: test_http_api.py  test_metrics.py  test_service_desk.py
(+64 files in other folders)
